# ollama-mcp

./: README.md  client.py  pyproject.toml
src/mcp_ollama_client/: __init__.py
